<?xml version="1.0"?>
<package>
  <name>mypkg</name>
  <version>1.0.0</version>
  <description>Birthday weekday</description>

  <maintainer email="s1426050CQ@s.chibakoudai.jp">TatsuyaSatou RyuichiUeda</maintainer>




  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


  <export>
    

  </export>
</package>
